tenace (0.8) upstream; urgency=low

  * Some lin parser improvements to rudimentarily parse BM2000 data.
  * Include dds copy in our source to facilitate compilation on systems not
    providing libdds.a.
  * New example: triple-coup.lin.
  * GUI uses libglade.

 -- Christoph Berg <myon@debian.org>  Sat, 20 Sep 2008 01:24:19 +0200

tenace (0.7) upstream; urgency=low

  * Use the currently loaded file for greying out already played cards, this
    looks nicer, and fixes the fact that grey.svg was not looked for in
    --prefix. Thanks to Mark Voorhies for spotting.
  * Add contrib/bonded.svg for convenience.
  * Board list can be reordered via the options menu.

 -- Christoph Berg <myon@debian.org>  Mon, 24 Mar 2008 23:50:38 +0100

tenace (0.6) upstream; urgency=low

  * Solver:
    + Always use dealt cards for parscore computation.
    + Parscore computation was broken when S makes more tricks than N.
  * UI:
    + Move fast forward/rewind to menu, make to buttons go one trick
      forward/backward, and generally reorder menu.
    + Support dragging to/from card window.
    + Implement options window and read/write ~/.config/tenacerc as keyfile.
    + Card filename and rendering size are now configurable.
    + Sort recently used files by time.
  * Hand widget: Start dragging manually to prevent dragging 'x' and empty
    cards.
  * Examples: Add squeeze.lin.

 -- Christoph Berg <myon@debian.org>  Sun, 16 Mar 2008 00:11:54 +0100

tenace (0.5) upstream; urgency=low

  * Use GTK_CHECK_VERSION to disable parts that require Gtk 2.10
    (recently used menu) and 2.12 (tooltips for alert explanations).

 -- Christoph Berg <myon@debian.org>  Sat, 09 Feb 2008 00:50:11 +0100

tenace (0.4) upstream; urgency=low

  * File handling:
    + EW vuln was parsed incorrectly; 0 is also none.
    + Fix parsing of tournament records.
    + Store number of claimed tricks.
    + Implement saving of multiple boards.
    + Add recently-used handling and filters.
  * Hand display: